codi to ds 0.5 migration

--- a/src/main/resources/org/superbiz/myfaces/i18n/messages.properties
+++ b/src/main/resources/org/superbiz/myfaces/i18n/messages.properties
@@ -47,8 +47,8 @@ menuAbout=About
 welcome=Welcome
 msgWelcome=Welcome to the Apache TomEE/MyFaces-Stack Demo
 
-msgUserRegistered=User {userName} registered successfully!
-msgUserNotRegistered=Failed to register user {userName}!
+msgUserRegistered=User %s registered successfully!
+msgUserNotRegistered=Failed to register user %s!
 
 msgLoginSuccessful=Login successful!
 msgLoginFailed=Login failed!
@@ -58,3 +58,5 @@ tblFeedbackDescription=Description
 lblTopic=Topic
 lblDescription=Feedback Text
 btnSave=save
+
+msgError=Error %s
